--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = teensy
 board = teensy41
 framework = arduino
+build_flags = -Ilib/Adafruit_BMP3XX
+lib_deps = 
+    Adafruit BMP3XX Library
